# SwRenderer

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.local.json
docs/: BRDF.md  CookTorranceBRDF.md  DisneyBRDF.md  IBL.md  RenderGraph.dot  RenderingTechniques.md  ShadowMapping.md  depth-pre-pass.md  lighting-plan.md  render_graph.dot  renderpass.dot  test.puml  two-pass-cull-plan.md
shaders/: Composite.frag.slang  Composite.slang  CullerCull.comp.slang  Geometry.slang  Instance.slang  NodeTransform.slang  Perspective.slang  PickerDraw.frag.slang  Skybox.frag.slang  Skybox.slang  Skybox.vert.slang  slangdconfig.json
shaders/BRDF/: SwBRDF.h.slang
shaders/Common/: SwBRDF.h.slang  SwCommon.h.slang  SwCommon.slang
shaders/Cull/: SwCull.h.slang  SwCull.slang  SwCullCompact.comp.slang  SwCullCompact.slang  SwCullDepthPyramid.comp.slang  SwCullPrepOcclusion.comp.slang  SwCullReset.comp.slang  SwCullWork.comp.slang  SwCullWorkFrustum.comp.slang  SwCullWorkOcclusion.comp.slang
shaders/FXAA/: SwFXAA.h.slang  SwFXAAWork.comp.slang
shaders/Geometry/: SwGeometry.h.slang  SwGeometry.slang  SwGeometry.vert.slang  SwGeometryWork.vert.slang  SwGeometryWorkOpaque.frag.slang  SwGeometryWorkOpaqueMasked.frag.slang  SwGeometryWorkTransparent.frag.slang
shaders/IBL/: SwIBL.h.slang  SwIBLBrdfLut.comp.slang  SwIBLIrradiance.comp.slang  SwIBLPrefilter.comp.slang  SwIBLSkybox.frag.slang  SwIBLSkybox.vert.slang
shaders/Lighting/: SwLighting.h.slang  SwShadowCull.comp.slang  SwShadowDraw.vert.slang
shaders/Pick/: SwPick.h.slang  SwPickDraw.frag.slang  SwPickDraw.vert.slang  SwPickReadback.comp.slang
shaders/PostProcess/: SwFXAA.comp.slang  SwPostProcess.h.slang  SwTonemap.comp.slang
shaders/Skybox/: SwSkybox.h.slang  SwSkyboxWork.frag.slang  SwSkyboxWork.vert.slang
shaders/WBOIT/: SwWBOIT.slang  SwWBOITComposite.frag.slang  SwWBOITComposite.vert.slang
shaders/source/: Composite.vert.slang  Culler.slang  CullerCompact.comp.slang  CullerCull.comp.slang  CullerDepthPyramid.comp.slang  CullerReset.comp.slang  Geometry.vert.slang  GeometryOpaque.frag.slang  GeometryTransparent.frag.slang  MaterialConstant.slang  Perspective.slang  Picker.slang  PickerDraw.vert.slang  PickerPick.comp.slang  RenderItem.slang  Skybox.frag.slang  Skybox.slang  Skybox.vert.slang  Vertex.slang
src/: main.cpp
src/Data/: SwAsset.cpp  SwAsset.h  SwBatch.cpp  SwBatch.h  SwCamera.cpp  SwCamera.h  SwInstance.cpp  SwInstance.h  SwLight.cpp  SwLight.h  SwMaterial.cpp  SwMaterial.h  SwMesh.cpp  SwMesh.h  SwNode.cpp  SwNode.h
src/Gui/: SwGui.cpp  SwGui.h
src/Misc/: SwHelper.cpp  SwHelper.h
src/Pass/: SwCull.h  SwPass.cpp  SwPass.h  SwRenderGraph.cpp  SwRenderGraph.h
src/Pass/Cull/: SwCull.h  SwCullCompact.cpp  SwCullDepthPyramid.cpp  SwCullDepthPyramid.h  SwCullReset.cpp  SwCullReset.h  SwCullWork.cpp  SwCullWork.h
src/Renderer/: SwEvents.cpp  SwEvents.h  SwHelper.cpp  SwImmSubmit.cpp  SwImmSubmit.h  SwLogger.cpp  SwLogger.h  SwRenderer.cpp  SwRenderer.h  SwRendererContext.cpp  SwRendererContext.h  SwScene.cpp  SwScene.h  SwStats.cpp  SwStats.h  SwSwapchain.cpp  SwSwapchain.h
src/Resource/: SwBuffer.cpp  SwBuffer.h  SwCommandBuffer.cpp  SwCommandBuffer.h  SwCommandPool.cpp  SwCommandPool.h  SwDescriptor.cpp  SwDescriptor.h  SwFence.cpp  SwFence.h  SwIResizable.h  SwImage.cpp  SwImage.h  SwPipeline.cpp  SwPipeline.h  SwPushConstant.h  SwResourceStager.cpp  SwResourceStager.h  SwSampler.cpp  SwSampler.h  SwSemaphore.cpp  SwSemaphore.h  SwShader.cpp  SwShader.h
src/Resources/: SwBuffer.cpp  SwBuffer.h  SwDescriptor.cpp  SwDescriptor.h  SwImage.cpp  SwImage.h  SwPipeline.cpp  SwPipeline.h  SwResourceStager.cpp  SwResourceStager.h  SwSampler.cpp  SwSampler.h  SwShader.cpp  SwShader.h
src/Scene/: SwCull.cpp  SwCull.h  SwDependency.cpp  SwDependency.h  SwGeometry.cpp  SwGeometry.h  SwPass.cpp  SwPass.h  SwPick.cpp  SwPick.h  SwRenderGraph.cpp  SwRenderGraph.h  SwScene.cpp  SwScene.h  SwSkybox.cpp  SwSkybox.h  SwSystem.cpp  SwSystem.h  SwWBOIT.cpp  SwWBOIT.h
src/Scene/System/: SwCull.cpp  SwCull.h  SwFXAA.cpp  SwFXAA.h  SwGeometry.cpp  SwGeometry.h  SwGui.cpp  SwGui.h  SwIBL.cpp  SwLighting.cpp  SwLighting.h  SwPick.cpp  SwPick.h  SwPostProcess.cpp  SwPostProcess.h  SwSkybox.cpp  SwSkybox.h  SwWBOIT.cpp
src/System/: SwCull.cpp  SwGeometry.cpp  SwGeometry.h  SwGui.cpp  SwGui.h  SwIBL.cpp  SwIBL.h  SwLighting.cpp  SwLighting.h  SwPick.cpp  SwPostProcess.cpp  SwSkybox.cpp  SwWBOIT.cpp
tools/: build.bat  compileCompileSlangShaders.ps1  compileShaders.cpp  compileSlangShaders.cpp  format.ps1
